[gd_scene load_steps=4 format=3 uid="uid://cf3tim0vcby8d"]

[ext_resource type="Script" uid="uid://bcqh8nhhf6q20" path="res://Scripts/Settings_menu.gd" id="1_4geyq"]
[ext_resource type="AudioStream" uid="uid://cs0o73peis3b4" path="res://SFX/title.ogg" id="2_i44u3"]

[sub_resource type="LabelSettings" id="LabelSettings_4geyq"]
font_size = 51

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_4geyq")

[node name="BackButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 28.0
offset_top = 16.0
offset_right = 133.0
offset_bottom = 57.0
text = "Back"

[node name="TextureRect" type="TextureRect" parent="BackButton"]
layout_mode = 0
offset_right = 111.0
offset_bottom = 57.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.0
offset_right = 87.0
offset_bottom = 70.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_4geyq")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -25.5
offset_right = 150.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Volume: "

[node name="HSlider" type="HSlider" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Fullscreen:"

[node name="CheckBox" type="CheckButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_i44u3")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="GridContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="GridContainer/CheckBox" to="." method="_on_check_box_toggled"]
